...
        
        // Error display
        LoginErrorDisplay(error: _errorMessage),
        SizedBox(height: 32,),
        // Next button
        LoginButton(
          text: 'Next',
          isLoading: _isLoading,
          isEnabled: _isNextButtonEnabled,
          onPressed: _databases.isEmpty 
              ? () {
                  final trimmedUrl = _urlController.text.trim();
                  if (trimmedUrl.isEmpty) {
...
